<resources>
    <string name="app_name">ToDoList</string>
    <string name="all">All</string>
    <string name="favourite">Favourite</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="new_task">New Task</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="from">From:</string>
    <string name="shared_pref">Shared Pref</string>
    <string name="external">External</string>
    <string name="internal">Internal</string>
    <string name="sql">SQL</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="change_task">Сhange task</string>
    <string name="delete_task">Delete task</string>
    <string name="add_task_to_favorites">Add a task to favorites</string>
</resources>